--- a/AgrarAlpha_v1/.settings/com.google.appengine.eclipse.core.prefs
+++ b/AgrarAlpha_v1/.settings/com.google.appengine.eclipse.core.prefs
@@ -1,4 +1,25 @@
 eclipse.preferences.version=1
 filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.9.14.jar|appengine-api-labs.jar|appengine-endpoints-deps.jar|appengine-endpoints.jar|appengine-jsr107cache-1.9.14.jar|asm-4.0.jar|datanucleus-api-jdo-3.1.3.jar|datanucleus-api-jpa-3.1.3.jar|datanucleus-appengine-2.1.2.jar|datanucleus-core-3.1.3.jar|geronimo-jpa_2.0_spec-1.0.jar|jdo-api-3.0.1.jar|jsr107cache-1.1.jar|jta-1.1.jar
 gaeDatanucleusVersion=v2
+gaeDeployDialogSettings=
 gaeHrdEnabled=true
+gaeLaunchAppInBrowser=true
+googleCloudSqlEnabled=true
+localDevMySqlEnabled=false
+mySqlDatabaseName=agrarApp
+mySqlDatabasePassword=SEWinf13
+mySqlDatabaseUser=root
+mySqlHostName=173.194.111.146
+mySqlIsConfigured=true
+mySqlJdbcJar=C\:\\Users\\kurs\\Downloads\\mysql-connector-java-5.1.33\\mysql-connector-java-5.1.33\\mysql-connector-java-5.1.33-bin.jar
+mySqlPort=3306
+prodDatabaseName=agrarApp
+prodDatabasePassword=SEWinf13
+prodDatabaseUser=root
+prodInstanceName=agraralphav1\:agraralphav1
+prodIsConfigured=true
+testDatabaseName=agrarApp
+testDatabasePassword=SEWinf13
+testDatabaseUser=root
+testInstanceName=173.194.111.146
+testIsConfigured=true
