--- a/AgrarAlpha_v1/.settings/com.google.appengine.eclipse.core.prefs
+++ b/AgrarAlpha_v1/.settings/com.google.appengine.eclipse.core.prefs
@@ -13,13 +13,13 @@ mySqlHostName=173.194.111.146
 mySqlIsConfigured=true
 mySqlJdbcJar=C\:\\Users\\kurs\\Downloads\\mysql-connector-java-5.1.33\\mysql-connector-java-5.1.33\\mysql-connector-java-5.1.33-bin.jar
 mySqlPort=3306
-prodDatabaseName=agrarApp
-prodDatabasePassword=SEWinf13
+prodDatabaseName=agrar
+prodDatabasePassword=
 prodDatabaseUser=root
-prodInstanceName=agraralphav1\:agraralphav1
+prodInstanceName=agraralphav1\:agrar
 prodIsConfigured=true
-testDatabaseName=agrarApp
-testDatabasePassword=SEWinf13
+testDatabaseName=agrar
+testDatabasePassword=
 testDatabaseUser=root
-testInstanceName=173.194.111.146
+testInstanceName=agraralphav1\:agrar
 testIsConfigured=true
