--- a/AgrarAlpha_v1/war/WEB-INF/web.xml
+++ b/AgrarAlpha_v1/war/WEB-INF/web.xml
@@ -33,7 +33,7 @@
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>DataManagerImp</servlet-name>
+    <servlet-name>DataManagerImpl</servlet-name>
     <url-pattern>/DataManager/try</url-pattern>
   </servlet-mapping>
   
